Add GameObject class to represent game entities

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,14 +5,14 @@
         "lib",
         "utils",
         "game",
+        "entities",
         "examples",
         "docs",
         "scripts",
         "resources",
         "config",
         "assets",
-        "models",
-        "entities"
+        "models"
     ],
     "java.project.outputPath": "bin"
 }
